src/test/deca/codegen/valid/decaObjet/cast/03triple.deca
// Description:
//    Caster en une classe statique dont la classe dynamique hérite (2 niveaux)
//
// Resultats:
//    0
//
// Historique:
//    cree le 21/06/2022

class A {
    int x = 0;
}

class B extends A{
    int x = 1;
}

class C extends B {
    int x = 2;
}

{
    C c = new C();
    A a = (A)(c);
    println(a.x);
}
